--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ description: "hello"
 commands:
   sethp:
     permission: onehhonehh.admin
-    permission-message: "nuh uh uh"
+    permission-message: "§4Only Admins can run this command!"
   settings:
     permission: onehhonehh.admin
-    permission-message: "nuh uh uh"
+    permission-message: ""
