--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,11 +8,11 @@ commands:
   sethp:
     permission: onehhonehh.admin
     permission-message: "§4Only Admins can run this command!"
-  settings:
-    default: true
   gethp:
     default: true
   syntax:
     default: true
   timer:
+    default: true
+  toggle:
     default: true
